# genart

./: .gitignore  README.md  genart.cabal  stack.yaml
src/: Main.hs
