name:                genart
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/genart#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable genart
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
    , cairo
    , colour
    , linear
    , MonadRandom
    , mtl
    , time
    , transformers
    , hsnoise
